added some comments. minor refactors

--- a/Tabletennis.Core.Services/Tabletennis.Core.Services.csproj
+++ b/Tabletennis.Core.Services/Tabletennis.Core.Services.csproj
@@ -58,8 +58,6 @@
       <Name>Tabletennis.Demo.MatchValidation</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="MatchValidation\SetRules\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
