--- a/Tabletennis.Demo.MatchValidation/Tabletennis.Demo.MatchValidation.csproj
+++ b/Tabletennis.Demo.MatchValidation/Tabletennis.Demo.MatchValidation.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Services\MatchValidationResult.cs" />
     <Compile Include="Services\MatchValidationService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SetRules\OneScoreEqualsElevenOrAboveSetRule.cs" />
