--- a/Tabletennis.Core.Tests/Tabletennis.Core.Tests.csproj
+++ b/Tabletennis.Core.Tests/Tabletennis.Core.Tests.csproj
@@ -51,7 +51,7 @@
     <Compile Include="Domain\SingleMatchSetTests.cs" />
     <Compile Include="Domain\SingleMatchTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\MatchValidationServiceTests.cs" />
+    <Compile Include="Services\MatchValidationService\MatchValidationServiceTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
