--- a/Tabletennis.Demo/Tabletennis.Demo.csproj
+++ b/Tabletennis.Demo/Tabletennis.Demo.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B9E09225-5A58-4806-B70F-7C0DC675DE9B}</ProjectGuid>
+    <ProjectGuid>{5EE19901-DC89-4A57-B0E3-87D65AB26CD9}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Tabletennis.Core.Domain</RootNamespace>
-    <AssemblyName>Tabletennis.Core.Domain</AssemblyName>
+    <RootNamespace>Tabletennis.Demo</RootNamespace>
+    <AssemblyName>Tabletennis.Demo</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,14 +40,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Match.cs" />
+    <Compile Include="Class1.cs" />
+    <Compile Include="Domain\DoubleMatch.cs" />
+    <Compile Include="Domain\SingleMatch.cs" />
+    <Compile Include="MatchValidation\Services\MatchValidationResult.cs" />
+    <Compile Include="MatchValidation\Services\MatchValidationService.cs" />
+    <Compile Include="MatchValidation\Services\SetValidationResult.cs" />
+    <Compile Include="MatchValidation\SetRules\HigherThanElevenOtherScoreMustBeNineOrAboveSetRule.cs" />
+    <Compile Include="MatchValidation\SetRules\OneScoreEqualsElevenOrAboveSetRule.cs" />
+    <Compile Include="MatchValidation\SetRules\PointsAreNotEqualSetRule.cs" />
+    <Compile Include="MatchValidation\SetRules\TwoPointDifferenceSetRule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Set.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Tabletennis.Core.Contracts\Tabletennis.Core.Contracts.csproj">
-      <Project>{AFE303C7-A085-4F5C-B6C2-3B2E6322574A}</Project>
+      <Project>{afe303c7-a085-4f5c-b6c2-3b2e6322574a}</Project>
       <Name>Tabletennis.Core.Contracts</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Tabletennis.Core.Domain\Tabletennis.Core.Domain.csproj">
+      <Project>{b9e09225-5a58-4806-b70f-7c0dc675de9b}</Project>
+      <Name>Tabletennis.Core.Domain</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
