--- a/Tabletennis.Core.Tests/Tabletennis.Core.Tests.csproj
+++ b/Tabletennis.Core.Tests/Tabletennis.Core.Tests.csproj
@@ -50,9 +50,9 @@
   <ItemGroup>
     <Compile Include="Domain\SingleMatchSetTests.cs" />
     <Compile Include="Domain\SingleMatchTests.cs" />
+    <Compile Include="EndToEndLikeTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\MatchValidationService\ValidateMatchTests.cs" />
-    <Compile Include="UnitTest1.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
